[package]
name            = "queen-log"
version         = "0.1.2"
license         = "MIT"
authors         = ["mitum <dangcheng@hotmail.com>"]
description     = "log"
documentation   = "https://docs.rs/queen-log"
homepage        = "https://github.com/mitum/queen-log"
repository      = "https://github.com/mitum/queen-log"
readme          = "README.md"
keywords        = ["log", "queen"]
exclude         = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
lazy_static = "1.0"
chrono = "0.4"
