[package]
name            = "queen-log"
version         = "0.2.0"
license         = "MIT"
authors         = ["mitum <dangcheng@hotmail.com>"]
description     = "log"
documentation   = "https://docs.rs/queen-log"
homepage        = "https://github.com/mitum/queen-log"
repository      = "https://github.com/mitum/queen-log"
readme          = "README.md"
keywords        = ["log", "queen"]
edition         = "2018"
exclude         = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
log = { version = "0.4", features = ["std"] }
env_logger = "0.6"
chrono = "0.4"
